Bug 401939 - Startup hangs if recent files points to missing mount
Summary: Startup hangs if recent files points to missing mount
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: 4.1.5
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-12-10 01:18 UTC by Austin Butler
Modified: 2018-12-10 17:00 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Austin Butler 2018-12-10 01:18:44 UTC
SUMMARY

Startup hangs indefinitely at "Loading Main Window" if there's a recent file in the RecentFiles section of kritarc that lives on a mount that's no longer present. If I remove the entry by hand, Krita loads in a few seconds.

STEPS TO REPRODUCE
1. Open .config/kritarc
2. Under [RecentFiles], add File1[$e]=/mnt/NAS/image.jpg
3. Under that line add Name1[$e]=image.jpg'
4. Save the file
5. Run Krita

OBSERVED RESULT

Krita hangs indefinitely at "Loading Main Window."

EXPECTED RESULT

Krita ignores or removes the inaccessible file from recent files.


SOFTWARE/OS VERSIONS
Linux: Arch 4.19.6-1-ck-ivybridge
KDE Plasma: N/A
Qt Version: 5.11.2-3
Comment 1 Halla Rempt 2018-12-10 16:44:51 UTC
Git commit dab1e85def2f4f31f7dcb099a33e9f8523f364ca by Boudewijn Rempt.
Committed on 10/12/2018 at 16:44.
Pushed by rempt into branch 'master'.

Only try to load a thumbnail for a recent file item that still exists

M  +23   -19   libs/ui/KisWelcomePageWidget.cpp

https://commits.kde.org/krita/dab1e85def2f4f31f7dcb099a33e9f8523f364ca
Comment 2 Halla Rempt 2018-12-10 17:00:10 UTC
Git commit fb901c6e3b8260bfac33b2d48b3121aa0245c9c8 by Boudewijn Rempt.
Committed on 10/12/2018 at 16:59.
Pushed by rempt into branch 'krita/4.1'.

Only load thumbnails for existing, local files

M  +36   -33   libs/ui/widgets/KisWelcomePageWidget.cpp

https://commits.kde.org/krita/fb901c6e3b8260bfac33b2d48b3121aa0245c9c8