Only try to load a thumbnail for a recent file item that still exists

BUG:401939